--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,9 @@ Suggests: gridExtra,
 	 TFBSTools,
 	 seqLogo,
          knitr,
-	 devtools
+	 devtools,
+	 motifRG,
+	 epicPMDdetect
 Encoding: UTF-8
 RoxygenNote: 7.1.0
 VignetteBuilder: knitr
